day00/ex02/doft.css
body {
	background-color: #505050;
}

#top {
	width: 1500px;
	height: 140px;
	margin-left: auto;
	margin-right: auto;
	background-color: #909090;
	border-radius: 15px;
	box-shadow: 10px 10px 10px;
}

#top_img {
	float: left;
	margin-top: 15px;
	margin-left: 15px;
	height: 125px;
}

#mag {
	float: left;
	margin-top: 15px;
	margin-left: 700px;
	position: absolute;
}

#refresh {
	float: right;
	margin-top: 15px;
	margin-right: 15px;
	width: 25px;
	height: 25px;
	clear: right;
}

#close {
	float: right;
	margin-top: 65px;
	margin-right: 15px;
	width: 25px;
	height: 25px;
	clear: right;
}

#big {
	width: 1400px;
	margin-left: auto;
	margin-top: 30px;
	margin-right: auto;
	position: relative;
	text-align: center;
	/* background-color: pink; */
}

#left {
	background-color: #909090;
	border-radius: 15px;
	box-shadow: 10px 10px 10px;
	float: left;
	height: 425px;
	width: 150px;
	/* clear: left; */
}

#middle {
	background-color: #909090;
	border-radius: 15px;
	box-shadow: 10px 10px 10px;
	float: left;
	height: 650px;
	width: 1050px;
	margin-left: 25px;
	margin-right: 25px;
}

#right {
	background-color: #909090;
	border-radius: 15px;
	box-shadow: 10px 10px 10px;
	height: 425px;
	width: 150px;
	float: left;
}

#mid_img {
	width: 1020px;
	height: 620px;
	/* position: relative; */
	margin-top: 15px;
}

.buttons {
	margin-top: 15px;
}

.icon {
	height: 60px;
	/* width: 60px; */
	margin-top: 5px;
	margin-left: auto;
	margin-right: auto;
}

#look {
	border-color: red;
	border-style: solid;
	border-width: 5px;
	border-radius: 5px;
}

